@@ -1,4 +1,8 @@
-2004-07-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b42
+2004-07-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b43
+
+	* Change: Add 'alternate' link to the header if RSS is enabled
+
+2004-07-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b42
 
 	* Change: Check for fitToWindow before outputting the 'onclick'
 	  attribute in view_photo.
